fix responsive issues card and social

--- a/src/components/about/Social.astro
+++ b/src/components/about/Social.astro
@@ -6,7 +6,7 @@ import Twitter from "../svg/Twitter.astro";
 import GitHub from "../svg/GitHub.astro";
 ---
 
-<div class="flex flex-row justify-center items-center gap-3 mb-32 -mt-24">
+<div class="flex flex-row justify-center items-center gap-3 mb-32 sm:-mt-24 mt-10">
   
  <Linkedin/><Instagram/><Twitter/><GitHub/>
  
