--- a/src/components/about/SvgSection.astro
+++ b/src/components/about/SvgSection.astro
@@ -6,7 +6,7 @@ const iconSquareSize= "80"
 
 ---
 
-<div class="flex flex-wrap gap-14 mx-auto w-2/3 xl:mt-32 mt-12 mb-32">
+<div class="flex flex-wrap gap-14 mx-auto w-2/3 xl:mt-32 mt-12 mb-32 justify-center sm:justify-start">
   
     <section class={svgClass}>
       <svg class="icon" height={iconSquareSize} width={iconSquareSize} viewBox="0 0 24 24"
