--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -1,4 +1,4 @@
-<h2 class="mb-10 xl:text-7xl  text-4xl text-accent font-bold">Experiencie</h2>
+<h2 class="mb-10 xl:text-7xl  text-4xl text-accent font-bold">Experience</h2>
 <ol class="relative border-s border-white ">                  
     <li class="mb-10 ms-4">
         <div class="absolute w-3 h-3 bg-accent rounded-full mt-1.5 -start-1.5 border border-black  "></div>
