--- a/src/components/about/Hero.astro
+++ b/src/components/about/Hero.astro
@@ -9,7 +9,7 @@ import Weather from "./Weather.astro";
 <div class="xl:flex flex-row items-center justify-between gap-5 pt-10 xl:w-full w-[85%]">
   <section class="flex-1 overflow-hidden"> <!-- flex-1 permite que la sección crezca, pero min-w-0 y overflow-hidden previenen que se desborde -->
     <h1 class="text-xl font-semibold text-accent truncate">David Mas-Bagà</h1>
-    <h2 class="font-bold text-3xl sm:text-6xl md:text-7xl lg:text-8xl">I'm Full Stack <span class="text-accent font-bold">Developer</span></h2>
+    <h2 class="font-bold text-3xl sm:text-6xl md:text-7xl lg:text-8xl">I'm a Full Stack <span class="text-accent font-bold">Developer</span></h2>
     <p class="serif text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl 2xl:text-4xl italic mt-10 break-words overflow-hidden">
       "As a developer, I am highly motivated to learn and focus on web and web application development. I consider myself a creative, dynamic, and responsible person, with great potential for professional growth. I have skills to work in a multidisciplinary environment and a high ability to develop proactive and organizational skills effectively."
     </p>
